# dioxus-provider

./: CAPABILITIES.md  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  release-plz.toml  todos.json
.cursor/plans/: dioxus-provider-enhancements-61811702.plan.md
.cursor/rules/: instructions.mdc
.github/: copilot-instructions.md
.github/workflows/: release-plz.yml
dioxus-provider-macros/: CHANGELOG.md  Cargo.toml
dioxus-provider-macros/src/: lib.rs
examples/: cache_expiration_demo.rs  cache_expiration_test.rs  composable_provider_demo.rs  comprehensive_demo.rs  counter_mutation_demo.rs  dependency_injection_demo.rs  features_overview.rs  interval_refresh_demo.rs  optimistic_minimal.rs  provider_state_combinators.rs  simplified_provider_demo.rs  structured_errors_demo.rs  suspense_demo.rs  swr_demo.rs  todo_app.rs
fullstack-example/: CHANGELOG.md
src/: cache.rs  callback.rs  errors.rs  global.rs  hooks.rs  injection.rs  lib.rs  log_utils.rs  mutation.rs  mutation_new.rs  param_utils.rs  platform.rs  provider.rs  provider_state.rs  refresh.rs  runtime.rs  state.rs  types.rs
src/hooks/: cache_mgmt.rs  main.rs  mod.rs  provider.rs  swr.rs  tasks.rs
src/hooks/internal/: cache_mgmt.rs  mod.rs  swr.rs  tasks.rs
src/runtime/: cache_mgmt.rs  request.rs  swr.rs  tasks.rs
tests/: provider_runtime.rs
