[package]
name = "dioxus-provider"
description = "Data fetching and caching library for Dioxus applications with intelligent caching strategies and global providers."
version.workspace = true
edition = "2024"
license = "MIT"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
readme = "./README.md"
homepage = "https://wheregmis.github.io"
repository = "https://github.com/wheregmis/dioxus-provider.git"
keywords = ["dioxus", "data-fetching", "caching", "providers", "swr"]
categories = ["gui", "asynchronous", "web-programming"]

[workspace.package]
version = "0.2.1"

[workspace]
members = [".", "dioxus-provider-macros"]

[features]
default = ["tracing"]
# Enable tracing/logging support
tracing = ["dep:tracing"]
# Enable plain logging without emoji decorations (requires tracing feature)
plain-logs = ["tracing"]

[dependencies]
dioxus = { version = "0.7.0", default-features = false, features = [
    "macro",
    "hooks",
    "signals",
] }
# dioxus-provider-macros = { version = "0.1.1" }
dioxus-provider-macros = { version = "0.2.1", path = "./dioxus-provider-macros" }
futures = "0.3"
tracing = { version = "0.1.41", optional = true }
thiserror = "2.0.17"
serde = { version = "1.0.226", features = ["derive"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Desktop/server tokio with more features
tokio = { version = "1.48.0", features = [
    "sync",
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-compatible tokio features only
tokio = { version = "1.45.1", features = ["sync", "time", "rt", "macros"] }
wasmtimer = "0.4.3"
web-time = "1.1.0"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["time"] }
chrono = { version = "0.4.42", features = ["std"] }
env_logger = "0.11"
tracing-subscriber = "0.3.20"
serde_json = { version = "1.0.145", features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Desktop-only dependencies for examples
dioxus = { version = "0.7.0", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Web-only dependencies for examples
dioxus = { version = "0.7.0", features = ["web"] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
